--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -1,1 +1,13 @@
 /* Desenvolva seu estilo aqui */
+
+
+
+ul{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: var(--color-brand-100);
+    cursor: pointer;
+}
