--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -14,8 +16,53 @@
   --color-grey-700: #f8f9fa;
   --color-brand-100: #087f5b;
   --color-brand-200: #099268;
+
   --font-size-1: 2.5rem;
   --font-size-2: 1.75rem;
   --font-size-3: 1.25rem;
   --font-size-4: 1rem;
+
+  --font-weight-1: 700;
+  --font-weight-2: 600;
+  --font-weight-3: 400;
+
+  --line-height-1: 150%;
+  --line-height-2: 2.5rem;
+  --line-height-3: 1.875rem;
+  --line-height-4: 1.5rem
+
+}
+
+
+ body {
+  font-family: 'Inter', sans-serif;
+} 
+
+.container{
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.logo-box{
+  width: 29px;
+  height: 21px;
+  color: var(--color-brand-100);
+  background-color: var(--color-brand-100);
+  border-radius: 0 6px 0 6px;
+}
+
+.observer{
+  /* position: absolute;
+  bottom: 0; */
+}
+
+.footer{
+  width: 100%;
+  height: 255px;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  background-color: var(--color-grey-100);
+  color: var(--color-grey-700);
 }
